--- a/LMS/Areas/Admin/Views/AssignSubject/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSubject/Index.cshtml
@@ -33,9 +33,9 @@
                                 <thead class="aThead">
                                     <tr>
                                         <th>ID</th>
-                                        <th>Class Name</th>
-                                        <th>Section Name</th>
-                                        <th>Subject Name</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -44,7 +44,7 @@
                                     {
                                         <tr>
                                             <td>@item.ClassSubject_Id</td>
-                                            <td>@(item.Class_Name + '-' + item.Section_Name)</td>
+                                            <td>@item.Class_Name</td>
                                             <td>@item.Section_Name</td>
                                             <td>@item.Subject_Name</td>
                                             <td>
@@ -71,9 +71,9 @@
                                 <tfoot class="aThead">
                                     <tr>
                                         <th>ID</th>
-                                        <th>Class Name</th>
-                                        <th>Section Name</th>
-                                        <th>Subject Name</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
                                         <th>Action</th>
                                     </tr>
                                 </tfoot>
@@ -284,7 +284,7 @@
                     var column = this;
                     //var theadname = $('#AttendanceDetailPage th').eq([d]).text();
                     var select = $('<select><option value="">ALL</option></select>')
-                        .appendTo($(column.header()).empty())
+                        .appendTo($(column.footer()).empty())
                         .on('change', function () {
                             var val = $.fn.dataTable.util.escapeRegex(
                                 $(this).val()
