--- a/LMS/Areas/Admin/Views/Grade/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Grade/Index.cshtml
@@ -35,9 +35,9 @@
                                         <th>Grade Name</th>
                                         <th>Start From</th>
                                         <th>End On</th>
-                                        <th>Class Name</th>
-                                        <th>Section Name</th>
-                                        <th>Subject Name</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -76,9 +76,9 @@
                                         <th>Grade Name</th>
                                         <th>Start From</th>
                                         <th>End On</th>
-                                        <th>Class Name</th>
-                                        <th>Section Name</th>
-                                        <th>Subject Name</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
                                         <th>Action</th>
                                     </tr>
                                 </tfoot>
@@ -288,7 +288,7 @@
                     var column = this;
                     //var theadname = $('#AttendanceDetailPage th').eq([d]).text();
                     var select = $('<select><option value="">ALL</option></select>')
-                        .appendTo($(column.header()).empty())
+                        .appendTo($(column.footer()).empty())
                         .on('change', function () {
                             var val = $.fn.dataTable.util.escapeRegex(
                                 $(this).val()
