--- a/LMS/Areas/Admin/Views/Section/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Section/Index.cshtml
@@ -32,7 +32,7 @@
                                 <thead class="aThead">
                                     <tr>
                                         <th>ID</th>
-                                        <th>Section Name</th>
+                                        <th>Section</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
