--- a/LMS/Areas/Admin/Views/Student/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Student/Index.cshtml
@@ -123,7 +123,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Update">
+                                        <input type="submit" class="btn btn-info" value="Add">
                                         @*Added By Absar*@
                                         <input type="hidden" id="Student_Id" name="Student_Id" />
                                         <input type="hidden" id="Student_Name" name="Student_Name" />
