--- a/LMS/Areas/Admin/Views/Class/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Class/Index.cshtml
@@ -35,7 +35,7 @@
                                 <thead class="aThead">
                                     <tr>
                                         <th>ID</th>
-                                        <th>Class Name</th>
+                                        <th>Class</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
