--- a/LMS/Areas/Admin/Views/User/Index.cshtml
+++ b/LMS/Areas/Admin/Views/User/Index.cshtml
@@ -63,7 +63,7 @@
                                                     <i class="fa fa-refresh" aria-hidden="true" title="ResetPassword" data-original-title="ResetPassword" style="font-size:18px;vertical-align: super;"></i>
                                                 </a>
 
-                                                
+
 
 
 
@@ -75,6 +75,16 @@
                                         </tr>
                                     }
                                 </tbody>
+                                <tfoot class="aThead">
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>User Name</th>
+                                        <th>User Email</th>
+                                        @*<th>User Password</th>*@
+                                        <th>User Role</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </tfoot>
                             </table>
                             <div class="clearfix">
 
@@ -301,18 +311,53 @@
 
 
 
-        $('#userpage').DataTable({
-            //responsive: true,
-            //autoWidth: false,
-            //"columnDefs": [
-            //    { "width": "15%", "targets": 0 },
-            //    { "width": "15%", "targets": 1 },
-            //    { "width": "15%", "targets": 2 },
-            //    { "width": "25%", "targets": 3 },
-            //    { "width": "15%", "targets": 4 },
-            //    { "width": "15%", "targets": 5 },
+        //$('#userpage').DataTable({
+        //    //responsive: true,
+        //    //autoWidth: false,
+        //    //"columnDefs": [
+        //    //    { "width": "15%", "targets": 0 },
+        //    //    { "width": "15%", "targets": 1 },
+        //    //    { "width": "15%", "targets": 2 },
+        //    //    { "width": "25%", "targets": 3 },
+        //    //    { "width": "15%", "targets": 4 },
+        //    //    { "width": "15%", "targets": 5 },
 
-            //],
+        //    //],
+        //});
+
+
+        $('#userpage').DataTable({
+            "aaSorting": [],
+            "bLengthChange": false,
+            "fixedHeader": { header: true, footer: true },
+
+            responsive: false,
+            //autoWidth: false,
+            //aaSorting: [[2, 'asc']],
+            //cache: true,
+
+
+            initComplete: function () {
+                this.api().columns([3]).every(function () {
+                    var column = this;
+                    //var theadname = $('#AttendanceDetailPage th').eq([d]).text();
+                    var select = $('<select><option value="">ALL</option></select>')
+                        .appendTo($(column.footer()).empty())
+                        .on('change', function () {
+                            var val = $.fn.dataTable.util.escapeRegex(
+                                $(this).val()
+                            );
+
+                            column
+                                .search(val ? '^' + val + '$' : '', true, false)
+                                .draw();
+                        });
+
+                    column.data().unique().sort().each(function (d, j) {
+                        select.append('<option value="' + d + '">' + d + '</option>')
+                    });
+                });
+            }
         });
 
 
