--- a/LMS/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -10,7 +10,14 @@
 
     
 <div class="panel-header panel-header-lg">
-    <canvas id="bigDashboardChart"></canvas>
+    <h1 style="color: #fff;font-size: 3em;text-align: justify;padding: 4% 8%;">
+        Start from where your <span style="    color: #b58e5a;
+        font-weight: bold;">Students</span> are,
+        not where you would like them to be.
+        <span style="display: block;
+        text-align: right;
+        font-size: 21px;">(-Dylan William)</span>
+    </h1>
 </div>
 <div class="content">
     <div class="row">
@@ -44,7 +51,7 @@
             <div class="card card-chart">
                 <div class="card-header">
                     <h5 class="card-category"></h5>
-                    <h4 class="card-title">24 Hours Performance</h4>
+                    <h4 class="card-title">Total Classes</h4>
                 </div>
                 <div class="card-body">
                     <h1>10</h1>
@@ -57,8 +64,8 @@
         <div class="col-md-6">
             <div class="card  card-tasks">
                 <div class="card-header ">
-                    <h5 class="card-category">Backend development</h5>
-                    <h4 class="card-title">Tasks</h4>
+                    
+                    <h4 class="card-title">Recent Posts</h4>
                 </div>
                 <div class="card-body ">
                     <div class="table-full-width table-responsive">
@@ -138,25 +145,23 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="card-category">All Persons List</h5>
-                    <h4 class="card-title"> Employees Stats</h4>
+                    
+                    <h4 class="card-title"> Announcement </h4>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table">
                             <thead class=" text-primary">
                             <th>
-                                Name
+                                Type
                             </th>
                             <th>
-                                Country
+                                Title
                             </th>
                             <th>
-                                City
+                                Date
                             </th>
-                            <th class="text-right">
-                                Salary
-                            </th>
+                            
                             </thead>
                             <tbody>
                                 <tr>
@@ -164,28 +169,24 @@
                                         Dakota Rice
                                     </td>
                                     <td>
-                                        Niger
+                                        Julius Caesar Act IV, Secen iii
                                     </td>
                                     <td>
-                                        Oud-Turnhout
+                                        20210118
                                     </td>
-                                    <td class="text-right">
-                                        $36,738
-                                    </td>
+                                    
                                 </tr>
                                 <tr>
                                     <td>
                                         Minerva Hooper
                                     </td>
                                     <td>
-                                        Curaçao
+                                        To Kill A Mockingbird
                                     </td>
                                     <td>
-                                        Sinaai-Waas
+                                        20210101
                                     </td>
-                                    <td class="text-right">
-                                        $23,789
-                                    </td>
+                                    
                                 </tr>
                                 <tr>
                                     <td>
@@ -195,11 +196,9 @@
                                         Netherlands
                                     </td>
                                     <td>
-                                        Baileux
+                                        20201215
                                     </td>
-                                    <td class="text-right">
-                                        $56,142
-                                    </td>
+                                    
                                 </tr>
                                 <tr>
                                     <td>
@@ -209,11 +208,9 @@
                                         Malawi
                                     </td>
                                     <td>
-                                        Feldkirchen in Kärnten
+                                        20200112
                                     </td>
-                                    <td class="text-right">
-                                        $63,542
-                                    </td>
+                                    
                                 </tr>
                                 <tr>
                                     <td>
@@ -223,11 +220,9 @@
                                         Chile
                                     </td>
                                     <td>
-                                        Gloucester
+                                        20210110
                                     </td>
-                                    <td class="text-right">
-                                        $78,615
-                                    </td>
+                                    
                                 </tr>
                             </tbody>
                         </table>
