--- a/LMS/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml
+++ b/LMS/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml
@@ -97,8 +97,8 @@
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-controller="Login" asp-action="profile">User Profile</a>
-                                    <a class="dropdown-item" asp-controller="Login" asp-action="logOut">Logout</a>
+                                    <a class="dropdown-item" asp-controller="Login" asp-action="profile"><span class="material-icons">person</span> User Profile</a>
+                                    <a class="dropdown-item" asp-controller="Login" asp-action="logOut"><span class="material-icons">exit_to_app</span> <p>Logout</p></a>
 
                                 </div>
                             </li>
